# tmd

./: .gitignore  Cargo.toml  README.md  package.yaml  rustfmt.toml  stack.yaml
.github/workflows/: rust.yml
app/: Main.hs
src/: cli.yml  main.rs
src/Control/Monad/: Indexed.hs
src/Data/: Exists.hs  NetEncoding.hs  NetParser.hs
src/Minecraft/: Protocol.hs
src/Minecraft/Protocol/: ByteReader.hs  DataTypes.hs  Direction.hs  Packet.hs  State.hs  Version.hs
src/Minecraft/Protocol/State/: Handshake.hs  Login.hs  Status.hs
src/net/: chat.rs  connection.rs  format.rs  listener.rs  mod.rs  packet.rs  packet_map.rs  packet_stream.rs  serialize.rs  source.rs  state.rs
src/net/connection/: packet_format.rs  stream.rs
src/net/connection/packet_format/: compressed.rs  default.rs
src/net/connection/stream/: encrypted.rs
src/net/packet/: handshake.rs  status.rs
src/net/packet_stream/: encryption.rs  packet_format.rs  stream.rs
src/net/packet_stream/packet_format/: compressed.rs  default.rs
src/net/packet_stream/stream/: encrypted.rs
src/net/protocol/: mod.rs  packet.rs  packet_map.rs  state.rs
src/net/protocol/state/: handshake.rs  login.rs  play.rs  status.rs
src/net/state/: play.rs  status.rs
