[package]
name = "tmd"
version = "0.1.0"
authors = ["James Martin <james@jtmar.me>"]
edition = "2018"
repository = "https://github.com/jamestmartin/tmd"
license = "GPL-3.0+"
publish = false

[dependencies]
async-trait = "0.1.36"
clap = { version = "2.33.1", features = ["yaml"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2.22", features = ["io-util", "macros", "net", "tcp", "rt-threaded"] }
uuid = { version = "0.8", features = ["serde"] }

# Dependencies required for compression
flate2 = "1.0.16"

# Dependencies required for encryption
aes = "0.4.0"
cfb8 = "0.4.0"
num-bigint = "0.3.0"
rand = "0.7.3"
reqwest = "0.10.7"
rsa = "0.3.0"
sha-1 = "0.9.1"
